<resources>
    <string name="app_name">Sourabh CITS World Wide</string>
    <string name="eng">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="tamil">எல்</string>
    <string name="telgu">తెలుగు</string>
    <string name="mal">മലയാളം</string>
    <string name="bangla">বাংলা</string>
    <string name="marathi">मराठी</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>