<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="gone"
        tools:visibility="visible"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            app:title="Language Preference"
            app:titleTextColor="@color/white"

            android:background="?attr/colorPrimary"

            android:elevation="4dp"

            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/English"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="English"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>


                <TextView
                    android:id="@+id/hindi"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/hindi"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>

                <TextView
                    android:id="@+id/tamil"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/tamil"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>

                <TextView
                    android:id="@+id/telgu"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/telgu"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>


                <TextView
                    android:id="@+id/mal"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/mal"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>


                <TextView
                    android:id="@+id/marathi"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/marathi"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="@color/grey"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"

                    android:layout_marginTop="4dp"

                    android:alpha="0.3"/>


                <TextView
                    android:id="@+id/bangla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/bangla"
                    android:textColor="@color/grey"
                    android:textSize="22sp"
                    android:textAlignment="center"

                    android:padding="4dp"

                    android:layout_marginTop="4dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>